# ros2-yolo26-detection

./: .gitignore  README.md
.obj-x86_64-linux-gnu/: CTestTestfile.cmake  cmake_install.cmake  install_manifest.txt  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
.obj-x86_64-linux-gnu/ament_cmake_core/: yolo26_interfacesConfig.cmake
.obj-x86_64-linux-gnu/ament_cmake_environment_hooks/: local_setup.dsv  package.dsv
.obj-x86_64-linux-gnu/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
.obj-x86_64-linux-gnu/ament_cppcheck/: cppcheck.txt
.obj-x86_64-linux-gnu/ament_flake8/: flake8.txt
.obj-x86_64-linux-gnu/rosidl_cmake/: rosidl_cmake-extras.cmake
.obj-x86_64-linux-gnu/yolo26_interfaces__py/: cmake_install.cmake
debian/: control  files  ros-humble-yolo26-interfaces.substvars  rules
src/my_talker_listener/: package.xml  setup.cfg  setup.py
src/py_pubsub/: package.xml  setup.py
src/yolo26_publisher_py/: package.xml  setup.py
yolo26_interfaces/: CMakeLists.txt  README.md
yolo26_interfaces/.obj-x86_64-linux-gnu/: CMakeCache.txt  CTestConfiguration.ini  Makefile  rosidl_adapter__arguments__yolo26_interfaces.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  (+1 more)
yolo26_publisher_py/: colcon_command_prefix_setup_py.sh  colcon_command_prefix_setup_py.sh.env  setup.cfg  setup.py
(+119 files in other folders)
