<?xml version="1.0"?>
<package format="3">
  <name>yolo26_publisher_py</name>
  <version>0.0.1</version>
  <description>YOLO26 detector ROS 2 node</description>
  <maintainer email="akbeymerve1@gmail.com">merve</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>yolo26_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>